Fix bug on IE
IE does not support the vmax  unit, changing to vmin instead

--- a/src/tourguide.scss
+++ b/src/tourguide.scss
@@ -15,14 +15,14 @@ Developed by Alvaro Montoro. More info: https://github.com/alvaromontoro/TourGui
     position: absolute;
     border-radius: 100%;
     box-shadow: inset 0 0 8px 0;
-    border: 200vmax solid;
+    border: 400vmin solid;
     color: rgba(0, 0, 0, 0.5);
     transition: all 0.5s;
     transform: translate(-50%, -50%);
     &.spjs-square,
     &.spjs-step-square {
       border-radius: 5px;
-      border-radius: calc(100vmax + 5px);
+      border-radius: calc(200vmin + 5px);
     }
     &.spjs-step-round {
       border-radius: 100%;
